2010-09-17  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_close):  Free matrix data that was stored in memory
	during input.  Otherwise we leak memory after every plot of matrix data.

2010-09-17  Thomas Sefzick <thse@users.sourceforge.net>

	* src/gadgets.h src/graphics.c src/save.c src/set.c set/show.c
	src/tables.c src/tables.h docs/gnuplot.doc:

	New options "set key maxcolumns N maxrows M" to manually adjust the
	automatic layout of items in the figure legend. Implemented for 2D
	plots only.

2010-09-16  Ethan A Merritt  <merritt@u.washington.edu>

	* tutorial/eg2.plt tutorial/eg6.plt tutorial/test_tikz.plt 
	tutorial/Makefile.am.in tutorial/header.tex tutorial/tutorial.tex:
	Update the LaTeX tutorial a bit.  More could be done.

2010-09-11  Ethan A Merritt  <merritt@u.washington.edu>

	Release 4.4.1

2010-09-10  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (boundary): When calculating the horizontal space
	required for x axis tick labels, we must ignore ticks that are outside
	the current axis range.

	* src/mouse.c (apply_zoom): Tick labels generated by
	'using xticlabels(N)' may have changed while the plot was zoomed, so we
	must preserve them when un-zooming. Otherwise a segfault is likely.

2010-08-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c:  The gnuplot_x11 side of Shige's fix.

2010-08-14  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* term/x11.trm:  The last font used inside an enhanced text string was
	not being cleared on exit.

2010-08-12  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.c:  OSX history command could segfault if there was no
	previous history file.

2010-08-09  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in src/plot.c: More work to enable autoconfigue on OSX.

2010-08-07  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c: Do not create a data record for a blank line at the end
	of the input stream.
	Bugfix.
